Complete constructor patterns code review - APPROVED with high commendation